Fix: Misaligned Cursor in scaled parent element

--- a/projects/angular2-draggable/src/scss/_variables.scss
+++ b/projects/angular2-draggable/src/scss/_variables.scss
@@ -1,5 +1,4 @@
 $handle-border-size:        7px;
 $handle-border-offset:      -5px;
-
 $handle-corner-size:        12px;
-$handle-corner-offset:      1px;
+$handle-corner-offset:      -4px;
